# flaskteroids

./: .coverage  .gitignore  404.html  AGENTS.md  GEMINI.md  README.md  [Preview]  index.html  mkdocs.yml  pyproject.toml  run.py  run_debug.py  sitemap.xml
.github/workflows/: flaskteroids.yml  test.yml
app/config/: routes.py
app/controllers/: articles_controller.py
controllers/: index.html
controllers/advanced/: index.html
controllers/routing/: index.html
docs/: cli.md  controllers.md  fields.md  forms.md  getting_started.md  index.md  jobs.md  models.md  project_structure.md  rate_limit.md  routing.md  views.md
docs/controllers/: index.md  routing.md
docs/models/: index.md
docs/other/: fields.md  forms.md  mailers.md
docs/views/: index.md
flaskteroids/: __init__.py  actions.py  app.py  controller.py  current.py  db.py  exceptions.py  fields.py  form.py  forms.py  inflector.py  mailer.py  model.py  registry.py  route.py  rules.py  str_utils.py
flaskteroids/cache/: __init__.py  inmemory.py
flaskteroids/cli/: artifacts.py  flaskteroids.py
flaskteroids/extensions/: celery.py  db.py  forms.py  jobs.py  mail.py  routes.py  utils.py
flaskteroids/generators/: generator.py  template_builder.py
flaskteroids/helpers/: __init__.py
flaskteroids/jobs/: job.py
getting_started/: index.html
models/: index.html
other/cli/: index.html
other/fields/: index.html
project_structure/: index.html
search/: search_index.json
tests/: conftest.py  test_fields.py  test_inflector.py  test_routes.py  test_str_utils.py
views/: index.html
(+80 files in other folders)
