[project]
name = "flaskteroids"
version = "0.1.0"
description = "Flask on steroids"
readme = "README.md"
dependencies = [
	"alembic>=1.15.1",
	"Flask",
	"python-dotenv>=1.0.1",
	"sqlalchemy",
	"celery"
]


[tool.flake8]
max-line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.10.0",
]
